[gd_scene load_steps=13 format=3 uid="uid://q3o6m3u5hq5o"]

[ext_resource type="Script" uid="uid://b6q1htns51xh7" path="res://scenes/menus/scripts/SelectorMenu.gd" id="1_c3o3f"]
[ext_resource type="PackedScene" uid="uid://btk5ue5k11f22" path="res://characters/indie/dokibird/RegularDragoon.tscn" id="2_ihlem"]
[ext_resource type="PackedScene" uid="uid://bgwly6pw4ffjm" path="res://characters/hololive/ina/Takodachi.tscn" id="3_xqctb"]
[ext_resource type="PackedScene" uid="uid://chpv30mp28r50" path="res://characters/indie/henya/rubixcube.tscn" id="4_u68mm"]
[ext_resource type="PackedScene" uid="uid://7yt7e447rxyw" path="res://characters/indie/saba/Kaniki.tscn" id="5_gliu8"]
[ext_resource type="PackedScene" uid="uid://3mleqnhrgn2q" path="res://characters/indie/neurosama/vedal.tscn" id="6_tin0t"]
[ext_resource type="PackedScene" uid="uid://fpfsxaq5akk3" path="res://scenes/character_sheets/structure/CharacterSheet.tscn" id="7_ihlem"]
[ext_resource type="PackedScene" uid="uid://dbh47uo1soxxb" path="res://characters/hololive/irys/HopeSoda.tscn" id="7_xqctb"]
[ext_resource type="PackedScene" uid="uid://cvywtndsvu2jg" path="res://characters/indie/matara_kan/momo.tscn" id="8_u68mm"]
[ext_resource type="PackedScene" uid="uid://c0utsgpebadc7" path="res://characters/indie/shylily/Shrimpies.tscn" id="9_gliu8"]
[ext_resource type="PackedScene" uid="uid://cg1lpbeqirmia" path="res://characters/indie/zentraya/gecko.tscn" id="10_tin0t"]
[ext_resource type="PackedScene" uid="uid://bpp1008y0rtrt" path="res://characters/hololive/fuwamoco/Ruffians.tscn" id="11_nxtbk"]

[node name="SelectorMenu" type="CanvasLayer"]
script = ExtResource("1_c3o3f")
selectable_characters = Array[PackedScene]([ExtResource("2_ihlem"), ExtResource("3_xqctb"), ExtResource("4_u68mm"), ExtResource("5_gliu8"), ExtResource("6_tin0t"), ExtResource("7_xqctb"), ExtResource("8_u68mm"), ExtResource("9_gliu8"), ExtResource("10_tin0t"), ExtResource("11_nxtbk")])

[node name="CharacterSelection" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -223.0
offset_top = 42.0
offset_right = 234.0
offset_bottom = 102.0
grow_horizontal = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -1.0
offset_right = -38.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Accept" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -79.0
offset_right = -3.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0
text = "Start Game"

[node name="SelectedCharacters" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = 58.0
offset_right = 17.0
offset_bottom = 297.0
grow_horizontal = 0

[node name="CharacterSheet" parent="." instance=ExtResource("7_ihlem")]
unique_name_in_owner = true
offset_left = 326.0
offset_top = 136.0
offset_right = 360.936
offset_bottom = 245.248

[connection signal="pressed" from="Control/Accept" to="." method="start_game"]
